--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,10 @@ body {
     --t-color:rgba(42, 90, 42, 0.815);
     --p-color:rgba(85, 148, 85, 0.815);
     --l-color: rgba(128, 128, 128, 0.705);
+    --title-font-size:36px;
+    --subTitle-font-size:24px;
+    --link-font-size:18px;
+    --paragraph-font-size:15px;
 }
 /*header starts here*/
 header{
@@ -24,7 +28,7 @@ header{
 }
 header h1 {
     font-weight: bold;
-    font-size: 36px;
+    font-size: var(--title-font-size);
     color: var(--t-color);
     margin: 0;
 }
@@ -36,14 +40,14 @@ header nav ul{
 }
 header nav ul li a{
     padding: 0 20px;
-    font-size: 1rem;
+    font-size: var(--link-font-size);
     color: var(--p-color);
     text-decoration: none;
 }
 /*header ends here*/
 /*hero starts here*/
 /*hero ends here*/
-/*general style for middel sections start here*/
+/*general style for middle sections start here*/
 .bio, .works, .contact{
     padding: 20px 35px;
     display: flex;
@@ -55,19 +59,20 @@ header nav ul li a{
 .section-title{
     width: 15%;
     height: 100%;
-    font-size: 1.5rem;
+    font-size: var(--subTitle-font-size);
     padding-right: 20px;
     text-align: right;
     color: var(--p-color);
 }
-/*general style for middel sections end here*/
-
+.flex-right{
+    width: 80%;
+    padding-left: 50px;
+    border-left: var(--p-color) solid 3px;
+}
+/*general style for middle sections end here*/
 /*About starts here*/
 .bio p{
-    width: 80%;
-    font-size: .85rem;
-    padding: 0 0 0 50px;
-    border-left: var(--p-color) solid 3px;
+    font-size: var(--paragraph-font-size);
     color:var(--l-color);
 }
 .bio p::first-letter{
@@ -75,22 +80,74 @@ header nav ul li a{
     font-size: 1.35rem;
 }
 /*About ends here*/
-
 /*Work starts here*/
+.work-grid-wrapper{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+}
+.work-grid-container{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows:repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-auto-flow: dense;
+}
+.work-grid-item{
+    width: 100%;
+    border: 2px solid var(--l-color);
+    position: relative;
+}
+.work-grid-item img{
+    max-width: 100%;
+    background-size: cover;
+}
+.work-grid-item div{
+    width: 180px;
+    padding:.5rem .5rem;
+    background-color: var(--l-color);
+    font-size: var(--link-font-size);
+    position: absolute;
+    bottom:1rem;
+}
+.work-grid-item div h3{
+    font-size: var(--link-font-size);
+}
+.work-grid-item div p{
+    font-size: var(--paragraph-font-size);
+}
+/*here is the only project I have for now...*/
+.project-1 {
+    position: relative;
+    overflow: hidden;
+}
+.project-1 iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    overflow: hidden;
+    scroll-behavior: ;
+}
+/*move project-5 to its place*/
+.project-5{
+    grid-row: 1/span 2;
+    grid-column: 1/span 2;
+}
 /*Work ends here*/
-
 /*Contact starts here*/
 .contact-info{
-    width: 80%;
-    padding:10px 0 0 50px;
-    border-left: var(--p-color) solid 3px;
+    padding-top:2.5px;
     text-align: center;
     display: flex;
     justify-content: space-between;
 }
 .contact-info a{
     padding:0 5px;
-    font-size: 1rem;
+    font-size: var(--link-font-size);
     font-style: normal;
     color: var(--p-color);
     text-decoration: none;
