--- a/assets/style.css
+++ b/assets/style.css
@@ -10,9 +10,11 @@ body {
 }
  /*declare global variables*/
 :root{
-    --t-color:rgba(42, 90, 42, 0.815);
-    --p-color:rgba(85, 148, 85, 0.815);
-    --l-color: rgba(128, 128, 128, 0.705);
+    --t-color:#172c36;
+    --p-color:#95b6c7;
+    --l-color: rgb(199, 199, 199);
+    --b-color:#f0f5fa;
+    --g-color:#b0bdb2;
     --title-font-size:36px;
     --subTitle-font-size:24px;
     --link-font-size:18px;
@@ -46,6 +48,40 @@ header nav ul li a{
 }
 /*header ends here*/
 /*hero starts here*/
+.hero{
+    position: relative;
+}
+.gradient{
+    background-image: linear-gradient(var(--p-color), var(--b-color));
+    width: 100%;
+    height: 400px;
+}
+
+.hero-content img{;
+    height: 60%;
+    background-size: cover;
+    position: absolute;
+    right:10%;
+    bottom: 25%;
+    opacity: .5;
+    z-index: 9999;
+}
+.hero h2{
+    font-size: var(--subTitle-font-size);
+    position: absolute;
+    bottom: 5%;
+    right: 10%;
+    text-align: right;
+    z-index: 9999;
+    animation: typing 6s steps(49);
+    animation-iteration-count: infinite;
+    overflow: hidden;
+    white-space: nowrap;
+}
+@keyframes typing{
+    0% {width: 0ch;}
+    100% {width: 49ch;}
+}
 /*hero ends here*/
 /*general style for middle sections start here*/
 .bio, .works, .contact{
@@ -55,6 +91,7 @@ header nav ul li a{
     justify-content: left;
     align-items: flex-start;
     position: relative;
+    background-color: var(--b-color);
 }
 .section-title{
     width: 15%;
@@ -98,10 +135,12 @@ header nav ul li a{
     width: 100%;
     border: 2px solid var(--l-color);
     position: relative;
+    background-color: white;
 }
 .work-grid-item img{
     max-width: 100%;
     background-size: cover;
+    opacity: 70%;
 }
 .work-grid-item div{
     width: 180px;
@@ -110,6 +149,7 @@ header nav ul li a{
     font-size: var(--link-font-size);
     position: absolute;
     bottom:1rem;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
 }
 .work-grid-item div h3{
     font-size: var(--link-font-size);
@@ -130,7 +170,6 @@ header nav ul li a{
     height: 100%;
     border: 0;
     overflow: hidden;
-    scroll-behavior: ;
 }
 /*move project-5 to its place*/
 .project-5{
@@ -139,19 +178,27 @@ header nav ul li a{
 }
 /*Work ends here*/
 /*Contact starts here*/
+.contact{
+    background-color: var(--l-color);
+    padding: 15px 35px;
+}
 .contact-info{
     padding-top:2.5px;
     text-align: center;
     display: flex;
     justify-content: space-between;
 }
+.contact .section-title{
+    color: var(--t-color);
+}
 .contact-info a{
     padding:0 5px;
     font-size: var(--link-font-size);
     font-style: normal;
-    color: var(--p-color);
+    color: var(--t-color);
     text-decoration: none;
-    border-bottom: var(--p-color) solid 1px;
+    border-bottom: var(--t-color) solid 1px;
+    font-weight: bold;
 }
 /*Contact ends here*/
 
