--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,7 @@ body {
     --subTitle-font-size:24px;
     --link-font-size:18px;
     --paragraph-font-size:15px;
+    --paragraph-font-small-size:10px;
 }
 /*header starts here*/
 header{
@@ -32,7 +33,6 @@ header h1 {
     font-weight: bold;
     font-size: var(--title-font-size);
     color: var(--t-color);
-    margin: 0;
 }
 header nav ul{
     display: flex;
@@ -56,7 +56,6 @@ header nav ul li a{
     width: 100%;
     height: 400px;
 }
-
 .hero-content img{;
     height: 60%;
     background-size: cover;
@@ -85,11 +84,10 @@ header nav ul li a{
 /*hero ends here*/
 /*general style for middle sections start here*/
 .bio, .works, .contact{
+    width: 100%;
     padding: 20px 35px;
-    display: flex;
+    display: inline-block;
     flex-wrap: wrap;
-    justify-content: left;
-    align-items: flex-start;
     position: relative;
     background-color: var(--b-color);
 }
@@ -97,14 +95,18 @@ header nav ul li a{
     width: 15%;
     height: 100%;
     font-size: var(--subTitle-font-size);
-    padding-right: 20px;
+    padding-right: 25px;
     text-align: right;
     color: var(--p-color);
+    display: inline-block;
+    vertical-align: top;
 }
 .flex-right{
     width: 80%;
     padding-left: 50px;
     border-left: var(--p-color) solid 3px;
+    display: inline-block;
+    vertical-align: top;
 }
 /*general style for middle sections end here*/
 /*About starts here*/
@@ -120,8 +122,8 @@ header nav ul li a{
 /*Work starts here*/
 .work-grid-wrapper{
     width: 80%;
-    display: flex;
-    justify-content: center;
+    display: inline-block;
+    /* justify-content: center; */
 }
 .work-grid-container{
     width: 100%;
@@ -156,6 +158,7 @@ header nav ul li a{
 }
 .work-grid-item div p{
     font-size: var(--paragraph-font-size);
+    word-wrap: break-word;
 }
 /*here is the only project I have for now...*/
 .project-1 {
@@ -182,21 +185,26 @@ header nav ul li a{
     background-color: var(--l-color);
     padding: 15px 35px;
 }
+.contact .section-title{
+    color: var(--t-color);
+}
+.comtact-info-wrapper{
+    display: inline-block;
+}
 .contact-info{
     padding-top:2.5px;
     text-align: center;
     display: flex;
+    flex-flow: wrap;
     justify-content: space-between;
 }
-.contact .section-title{
-    color: var(--t-color);
-}
 .contact-info a{
-    padding:0 5px;
+    /* padding:0 5px; */
     font-size: var(--link-font-size);
     font-style: normal;
     color: var(--t-color);
     text-decoration: none;
+    text-justify: center;
     border-bottom: var(--t-color) solid 1px;
     font-weight: bold;
 }
@@ -204,10 +212,49 @@ header nav ul li a{
 /*media queries for responsive design starts here*/
 /*media queries for desktop*/
 @media all and (max-width:980px){
-
-}
+    /*push header inward*/
+    header h1{
+        margin-left: 5px;
+    }
+    /*modify hero section */
+    .gradient{
+        height: 250px;
+    }
+    .hero h2{
+        width:40%;
+        bottom: 30%;
+        left: 10%;
+        text-align: left;
+        font-size: 1.5em;
+        white-space:pre;
+        animation: typing 6s steps(49);
+        animation-iteration-count: 1;
+    }  
+    /*general font size for middle sections end here*/
+    .section-title{
+        font-size: var( --link-font-size);
+    }
+    /*work section */
+    .work-grid-item div{
+        width: 100px;
+    }
+    .work-grid-item div h3{
+        font-size: var(--paragraph-font-size);
+    }
+    .work-grid-item div p{
+        font-size: var(--paragraph-font-small-size);
+    }
+    /*contact section */
+    .contact-info {
+        font-size: var( --link-font-size);
+        padding-top:0;
+    }
 /*media queries for tablet adn smaller screen*/
 @media all and (max-width:768px){
+    /*header section */
+    header nav ul li a:nth-child(1){
+        padding-left: 5px;
+    }
 
 }
 /*media queries for phones and smaller screen*/
