responsive design for samll tablet and phone

--- a/assets/style.css
+++ b/assets/style.css
@@ -137,12 +137,12 @@ header nav ul li a{
     width: 100%;
     border: 2px solid var(--l-color);
     position: relative;
-    background-color: white;
+    background-color:white;
 }
 .work-grid-item img{
     max-width: 100%;
     background-size: cover;
-    opacity: 70%;
+    opacity: .5;
 }
 .work-grid-item div{
     width: 180px;
@@ -199,7 +199,6 @@ header nav ul li a{
     justify-content: space-between;
 }
 .contact-info a{
-    /* padding:0 5px; */
     font-size: var(--link-font-size);
     font-style: normal;
     color: var(--t-color);
@@ -230,7 +229,7 @@ header nav ul li a{
         animation: typing 6s steps(49);
         animation-iteration-count: 1;
     }  
-    /*general font size for middle sections end here*/
+    /*general middle sections font size for middle sections end here*/
     .section-title{
         font-size: var( --link-font-size);
     }
@@ -254,6 +253,45 @@ header nav ul li a{
     /*header section */
     header nav ul li a:nth-child(1){
         padding-left: 5px;
+    }
+    /*hero section */
+    .hero h2{
+        font-size: var(--link-font-size);
+    }
+    /*general middle sections reduce margin for all the class .flex right*/
+    .flex-right{
+        padding-left: 20px;
+    }
+    /*work sections - move all the title tage under the linked image*/
+    .work-grid-item div{
+        width: 100%;
+        display: flex;
+        flex-flow: column;
+        bottom: .015rem;
+        padding:.25rem .25rem;
+    }
+    .work-grid-item div h3{
+        font-size: var(--paragraph-font-small-size);
+    }
+    .work-grid-item div p{
+        font-size: var(--paragraph-font-small-size);
+    }
+    /*comtact section*/
+    .contact .section-title{
+        width: 100%;
+        flex: 1 1 auto;
+        padding-right: 0px;
+        border-bottom: var(--t-color) solid 2px;;
+        text-align: center;
+    }
+    .contact .flex-right{
+        width: 100%;
+        padding-left: 0px;
+        padding-top: .5rem;
+        border-left: none;
+    }
+    .contact-info a{
+        font-size: var(--paragraph-font-size);
     }
 
 }
