--- a/assets/style.css
+++ b/assets/style.css
@@ -281,7 +281,7 @@ header nav ul li a{
         width: 100%;
         flex: 1 1 auto;
         padding-right: 0px;
-        border-bottom: var(--t-color) solid 2px;;
+        border-bottom: var(--t-color) solid 2px;
         text-align: center;
     }
     .contact .flex-right{
@@ -293,11 +293,52 @@ header nav ul li a{
     .contact-info a{
         font-size: var(--paragraph-font-size);
     }
-
 }
 /*media queries for phones and smaller screen*/
 @media all and (max-width:575px){
-
+    /*header move the navigation item lower*/
+    header nav ul{
+        padding-top: 20px;
+    }
+    /*modify hero animiation*/
+    .hero-content h2{
+        width: 70%;
+        text-indent: -9999px;
+        left: -5%;
+    }
+    .hero-content h2 span{
+        text-index:9999px;
+    }
+    /*general style for bio and work sections*/
+    .section-title{     
+        width: 100%;
+        flex: 1 1 auto;
+        padding-right: 0px;
+        text-align: center;
+    }
+    .bio h2, .works h2{
+        border-bottom: var(--p-color) solid 2px;
+    } 
+    .flex-right{
+        width: 100%;
+        padding-left: 0px;
+        padding-top: .5rem;
+        border-left: none;
+    }
+    /*modify work sections' css grid*/
+    .work-grid-wrapper{
+        width: 100%;
+    }
+    .work-grid-container{
+        grid-template-columns:1fr;
+        grid-template-rows:repeat(5, 1fr);
+        grid-gap: 10px 0;
+    }
+    .project-5{
+        grid-row: 1/span 1;
+        grid-column: 1/span 1;
+    }
 }
+
 /*media queries for responsive design ends here*/
 
